WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77334
[chromium] MediaStream API: Fix a few memory leaks
https://bugs.webkit.org/show_bug.cgi?id=77334
Summary
[chromium] MediaStream API: Fix a few memory leaks
Tommy Widenflycht
Reported
2012-01-30 05:32:33 PST
It seems that either the behaviour of WebPrivatePtr has changed or I misunderstood something, but I fixed a memory leak in WebMediaStreamDescriptor and safeguarded WebMediaStreamSource.
Attachments
Patch
(4.37 KB, patch)
2012-01-30 05:35 PST
,
Tommy Widenflycht
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tommy Widenflycht
Comment 1
2012-01-30 05:35:56 PST
Created
attachment 124535
[details]
Patch
WebKit Review Bot
Comment 2
2012-01-30 05:37:38 PST
Please wait for approval from
fishd@chromium.org
before submitting because this patch contains changes to the Chromium public API.
Darin Fisher (:fishd, Google)
Comment 3
2012-01-30 09:27:24 PST
Comment on
attachment 124535
[details]
Patch Sorry for not catching this in the initial code review!
WebKit Review Bot
Comment 4
2012-01-30 10:36:33 PST
Comment on
attachment 124535
[details]
Patch Clearing flags on attachment: 124535 Committed
r106256
: <
http://trac.webkit.org/changeset/106256
>
WebKit Review Bot
Comment 5
2012-01-30 10:36:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug