[chromium] MediaStream API: Fix a few memory leaks https://bugs.webkit.org/show_bug.cgi?id=77334

Reviewed by Darin Fisher.

It seems that either the behaviour of WebPrivatePtr has changed or I misunderstood
something, but I fixed a memory leak in WebMediaStreamDescriptor and safeguarded
WebMediaStreamSource.

* public/platform/WebMediaStreamDescriptor.h:
(WebKit::WebMediaStreamDescriptor::WebMediaStreamDescriptor):
* public/platform/WebMediaStreamSource.h:
(WebKit::WebMediaStreamSource::WebMediaStreamSource):
(WebKit::WebMediaStreamSource::operator=):
(WebMediaStreamSource):
* src/WebMediaStreamDescriptor.cpp:
(WebKit::WebMediaStreamDescriptor::assign):
* src/WebMediaStreamSource.cpp:
(WebKit::WebMediaStreamSource::assign):
(WebKit):


Canonical link: https://commits.webkit.org/94227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106256 268f45cc-cd09-0410-ab3c-d52691b4dbfc